# Master_Thesis

./: README.md
Weak_Annotation_Visualization (Author's Embeddings)/: .gitignore  README.md  pyproject.toml  requirement.txt  seed_averaging.py
Weak_Annotation_Visualization (Author's Embeddings)/configs/prompts/: actionsense_prompts.json  wear_prompts.json  wetlab_prompts.json
Weak_Annotation_Visualization (Author's Embeddings)/scripts/: run_classification.py  run_clustering.py  run_evaluation.py  run_visualization.py
Weak_Annotation_Visualization (Author's Embeddings)/src/weak_annotation/classification/: clip_classifier.py
Weak_Annotation_Visualization (Author's Embeddings)/src/weak_annotation/clustering/: gmm.py
Weak_Annotation_Visualization (Author's Embeddings)/src/weak_annotation/utils/: data.py  data_io.py  metrics.py  paths.py  torch_helpers.py
Weak_Annotation_Visualization (Author's Embeddings)/src/weak_annotation/visualization/: heatmaps.py  projections.py  timeline.py
Weak_Labeling_Using_BLIP2/: .gitignore  README.md  pyproject.toml  requirements.txt
Weak_Labeling_Using_BLIP2/configs/: blip2_wear.yaml  blip2_wetlab.yaml
Weak_Labeling_Using_BLIP2/scripts/: run_captions.py  run_classification.py  run_clustering.py  run_extraction.py  run_pooling.py  run_visualization.py
Weak_Labeling_Using_BLIP2/src/blip2_har/: __init__.py
Weak_Labeling_Using_BLIP2/src/blip2_har/captions/: __init__.py  generator.py
Weak_Labeling_Using_BLIP2/src/blip2_har/classification/: itc_classifier.py
Weak_Labeling_Using_BLIP2/src/blip2_har/clustering/: gmm.py
Weak_Labeling_Using_BLIP2/src/blip2_har/features/: extractor.py  pooling.py
Weak_Labeling_Using_BLIP2/src/blip2_har/utils/: data_io.py  paths.py  srt_helpers.py
Weak_Labeling_Using_BLIP2/src/blip2_har/visualization/: heatmaps.py  projections.py  timeline.py
Weak_Labeling_Using_XCLIP/: README.md  pyproject.toml  requirements.txt
Weak_Labeling_Using_XCLIP/configs/: annotation_pipeline_4sec_xclip.yaml
Weak_Labeling_Using_XCLIP/scripts/: run_classification.py  run_clustering.py  run_extraction.py  run_preprocessing.py  run_visualization.py
Weak_Labeling_Using_XCLIP/src/: config.py
Weak_Labeling_Using_XCLIP/src/etl/: ffmpeg_preprocess.py
Weak_Labeling_Using_XCLIP/src/models/: xclip_embedder.py
Weak_Labeling_Using_XCLIP/src/storage/: embeddings.py
Weak_Labeling_Using_XCLIP/src/video/: sliding_windows.py
Weak_Labeling_Using_XCLIP/src/xclip_har/classification/: matcher.py
Weak_Labeling_Using_XCLIP/src/xclip_har/clustering/: gmm.py
Weak_Labeling_Using_XCLIP/src/xclip_har/features/: extractor.py  preprocessor.py
Weak_Labeling_Using_XCLIP/src/xclip_har/utils/: data_io.py  paths.py
Weak_Labeling_Using_XCLIP/src/xclip_har/visualization/: heatmaps.py  (+2 more)
